starting codding ViewResults in UI

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="search">
+        <input type="text" class="search_input">
+        <button class="search_button">Поиск</button>
+    </div>
+    <div class="search_results">
+        
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
