--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   height: 4em;
   position: relative;
   margin: left;
-  margin-left: 250px;
+  margin-left: 40%;
   margin-top: 130px;
 }
 .sk-fading-circle .sk-circle {
@@ -148,11 +148,12 @@
 .border {
 list-style: none;
 padding: 0;
-width: 75%;
+width: 100%;
+margin: 0;
 }
 .border li {
 font-family: "Trebuchet MS", "Lucida Sans";
-padding: 7px 20px;
+padding: 7px 10px;
 margin-bottom: 10px;
 border-radius: 5px;
 border-left: 10px solid #f05d22; 
@@ -163,21 +164,24 @@ box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
 font-size: 15px;
 transition: 0.3s all linear;
 }
-.border li:nth-child(2){border-color: #8bc63e;}
-.border li:nth-child(3){border-color: #fcba30;}
-.border li:nth-child(4){border-color: #1ccfc9;}
-.border li:nth-child(5){border-color: #493224;}
-.border li:hover {border-left: 10px solid transparent;}
-.border li:nth-child(1):hover {border-right: 10px solid #f05d22;}
-.border li:nth-child(2):hover {border-right: 10px solid #8bc63e;}
-.border li:nth-child(3):hover {border-right: 10px solid #fcba30;}
-.border li:nth-child(4):hover {border-right: 10px solid #1ccfc9;}
-.border li:nth-child(5):hover {border-right: 10px solid #493224;}
+.search {
+  height: 20px;
+  padding: 10px 10px;
+}
 
+
+.border li:nth-child(1){border-color: #7a1063; }
+.border li:nth-child(2){border-color: #1ccfc9; }
+.border li:nth-child(3){border-color: #8bc63e; }
+.border li:nth-child(4){border-color: #8bc63e; }
+.border li:nth-child(5){border-color: #8bc63e; }
+.border li:nth-child(6){border-color: #8bc63e; }
+.border li:nth-child(7){border-color: #1ccfc9; }
+.border li:nth-child(8){border-color: #7a1063; }
+.border li:hover {border-left: 10px solid transparent;}
 
 .border em {
 float: right;
-
 } 
     </style>
     <div class="search">
