--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ float: right;
             
     </div>
     <section class="loader">
+      <div>Получение данных...</div>
             <div class='sk-fading-circle'>
               <div class='sk-circle sk-circle-1'></div>
               <div class='sk-circle sk-circle-2'></div>
